# git-indexer-old

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devbox.json  entrypoint.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  utils.py
.github/workflows/: build_n_push.yaml
gcp/: README.md  csv2gs.sh
gcp/bq/: bq_load.sh  schema.json
gui/: __init__.py
indexer/: __init__.py  models.py  stats.py
scripts/: README.md  csv2bq.sh  csv2gs.sh  schema.json
scripts/bq/: bq_load.sh  schema.json
scripts/cloud_function/: load_csv_to_bigquery.py  requirements.txt
templates/: base.html  git_commit_list.html  search.html
tests/: conftest.py  constants.py  test_gui.py  test_indexer.py  test_models.py  test_runner.py  test_utils.py
