[tool.poetry]
name = "git indexer"
version = "0.9.0"
description = "index git commits to gather stats for analysis"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "MIT"

# this section contains all dependencies required to run unit and integration tests
# not just dependencies requied for lambda runtime
[tool.poetry.dependencies]
python = "^3.10"
python-gitlab = "^3.15.0"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.17"}
PyDriller = "^2.5"
pygithub = "^1.58.2"
psutil = "^5.9.5"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-wtf = "^1.1.1"
bootstrap-flask = "^2.2.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
pytest-cov = "4.1.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
# formatting, linting
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-fixme = "^1.1.1"
flake8-variables-names = "^0.0.5"
types-setuptools = "^57.4.8"
types-toml = "^0.10.3"
isort = "^5.12.0"
types-psutil = "^5.9.5.15"
types-google-cloud-ndb = "^2.1.0.7"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
# vscode cannot debug when coverage is enabled
# add these command line options manually to run with coverage
# addopts = "-v --cov=. --cov-report term"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "dataclasses",
    "pydriller",
    "pydriller.git",
    "pydriller.domain.commit",
    "flask_bootstrap",
    "flask_wtf",
    "wtforms.fields"
]
ignore_missing_imports = true
